# TR1_camadafisica

./: CMakeLists.txt  README.md  main.cpp
cf_build/: CMakeCache.txt  Makefile  cmake_install.cmake
inc/: camada_app.h  camada_enlace.h  camada_fisica.h  utils.h
src/: camada_app.cpp  camada_enlace.cpp  camada_fisica.cpp  main.cpp  utils.cpp
